--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Catest</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
